# idn-event-indexer

./: Cargo.toml  Dockerfile  LICENSE  README.md
.github/workflows/: rust.yml
ideal-metadata/: Cargo.toml  ideal.scale
ideal-metadata/src/: lib.rs
ideal-network-local-metadata/: Cargo.toml  ideal.scale
ideal-network-local-metadata/src/: lib.rs
indexer/: Cargo.toml
indexer/src/: config.rs  ideal.rs  kusama.rs  main.rs  pallets.rs  polkadot.rs  rococo.rs  tests.rs  westend.rs
kusama-metadata/: Cargo.toml
kusama-metadata/src/: lib.rs
polkadot-metadata/: Cargo.toml
polkadot-metadata/src/: lib.rs
rococo-metadata/: Cargo.toml
rococo-metadata/src/: lib.rs
westend-metadata/: Cargo.toml
westend-metadata/src/: lib.rs
