[package]
name = "acuity-index-polkadot"
version = "0.2.2"
edition = "2021"

[dependencies]
polkadot-metadata = { path = "../polkadot-metadata" }
kusama-metadata = { path = "../kusama-metadata" }
rococo-metadata = { path = "../rococo-metadata" }
westend-metadata = { path = "../westend-metadata" }
ideal-network-local-metadata = { path = "../ideal-network-local-metadata" }
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread"] }
subxt = "0.35.3"
clap = { version = "4.3.19", features = ["derive"] }
hex-literal = "0.4.1"
clap-verbosity-flag = "2.0.1"
sled = { version = "0.34.7", default-features = false }
byte-unit = "4.0.19"
serde = { version = "1.0.162", features = ["derive"] }
zerocopy = "0.7.8"
tracing-log = "0.2.0"
acuity-index-substrate = { path = "../../idn-acuity-index-substrate" }
