[package]
name = "acuity-index-ideal"
version = "0.1.0"
edition = "2021"

[dependencies]
ideal-metadata = { path = "../ideal-metadata" }
acuity-index-substrate = { git = "https://github.com/ideal-lab5/idn-acuity-index-substrate" }
byte-unit = "4.0.19"
clap = { version = "4.5.1", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
serde = { version = "1.0.130", features = ["derive"] }
sled = "0.34.7"
subxt = "0.35.3"
tokio = { version = "1.35.1", features = ["full"] }
tracing-log = "0.2.0"
zerocopy = "0.7.32"
hex = "0.4.3"
lazy_static = "1.4.0"
